// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`player.service should clear the board 1`] = `
Array [
  Array [
    "{\\"type\\":\\"ClearBoard\\",\\"payload\\":[]}",
  ],
  Array [
    "{\\"type\\":\\"NewBoardState\\",\\"payload\\":[]}",
  ],
]
`;

exports[`player.service should disconnect a player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"PlayerDisconnected\\",\\"payload\\":[{\\"status\\":\\"ActionNotTaken\\"}]}",
  ],
]
`;

exports[`player.service should join a new player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"UpdatePlayerList\\",\\"payload\\":[{\\"id\\":\\"some-short-v4-uuid-0\\",\\"name\\":\\"foo\\",\\"color\\":{\\"background\\":{\\"r\\":251,\\"g\\":154,\\"b\\":240},\\"text\\":{\\"r\\":123,\\"g\\":26,\\"b\\":112}},\\"status\\":\\"ActionNotTaken\\"}]}",
  ],
]
`;

exports[`player.service should move a chess figure 1`] = `
Array [
  Array [
    "{\\"type\\":\\"FigureMoved\\"}",
  ],
  Array [
    "{\\"type\\":\\"NewBoardState\\"}",
  ],
]
`;

exports[`player.service should set a turn if user\`s move already exist 1`] = `Array []`;

exports[`player.service should skip a move for a player 1`] = `
Array [
  Array [
    "{\\"type\\":\\"MoveSkipped\\",\\"payload\\":[{\\"id\\":\\"some-short-v4-uuid-0\\",\\"name\\":\\"foo\\",\\"color\\":{\\"background\\":{\\"r\\":251,\\"g\\":154,\\"b\\":240},\\"text\\":{\\"r\\":123,\\"g\\":26,\\"b\\":112}},\\"status\\":\\"MoveSkipped\\"}]}",
  ],
]
`;
